FreedomSanboxAntDeploy/src/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Annualized__c</fullName>
        <label>Annualized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Expenses__c</fullName>
        <label>Current Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Essential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Essential?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expense_Growth_Rate__c</fullName>
        <label>Expense Growth Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From_Portal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Expenses__c</fullName>
        <label>General Expenses</label>
        <picklist>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MonthlyExpense__c</fullName>
        <formula>CASE( Frequency__c , 
&apos;Yearly&apos; ,  (Current_Expenses__c /12),
 &apos;Half-Yearly&apos;, (Current_Expenses__c /6) ,
&apos;Quarterly&apos; ,  (Current_Expenses__c /3),
&apos;Monthly&apos; ,  (Current_Expenses__c ),
(Current_Expenses__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MonthlyExpense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Expenses__c</fullName>
        <label>Sub Expenses</label>
        <picklist>
            <controllingField>General_Expenses__c</controllingField>
            <picklistValues>
                <fullName>Property Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House(Society) Maintenance Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water or Sewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone/Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothes Ironing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House Maid/ Servants Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Goods Maintenance/ Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing and Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruits/ Vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital and Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Education</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>